module-resources/apply/deployment.yml
---
# Source: sap-btp-operator/templates/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    control-plane: controller-manager
    app.kubernetes.io/instance: sap-btp-operator
    app.kubernetes.io/name: sap-btp-operator
  name: sap-btp-operator-controller-manager
  namespace: kyma-system
spec:
  replicas: 1
  selector:
    matchLabels:
      control-plane: controller-manager
      app.kubernetes.io/instance: sap-btp-operator
      app.kubernetes.io/name: sap-btp-operator
  template:
    metadata:
      annotations:
        checksum/config: 004b11639640a66d6358133d5765ee04aa5b991bed6a15a0e815611f9b38d4f8
        sidecar.istio.io/inject: "false"
      labels:
        control-plane: controller-manager
        app.kubernetes.io/instance: sap-btp-operator
        app.kubernetes.io/name: sap-btp-operator
        sidecar.istio.io/inject: "false"
    spec:
      serviceAccountName: sap-btp-operator
      securityContext:
        runAsGroup: 30001
        runAsNonRoot: true
        runAsUser: 10001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - args:
            - --logger_use_dev_mode=true
          command:
            - /manager
          image: ""
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          name: manager
          ports:
            - containerPort: 9443
              name: webhook-server
              protocol: TCP
            - containerPort: 8080
              name: metrics
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            limits:
              cpu: 1
              memory: 500Mi
            requests:
              cpu: 10m
              memory: 20Mi
          volumeMounts:
            - mountPath: /tmp/k8s-webhook-server/serving-certs
              name: cert
              readOnly: true
      terminationGracePeriodSeconds: 10
      priorityClassName: btp-manager-kyma-priority
      volumes:
        - name: cert
          secret:
            defaultMode: 420
            secretName: webhook-server-cert
