module-resources/apply/network-policies.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: kyma-system
  name: kyma-project.io--btp-operator-allow-to-apiserver
spec:
  podSelector:
    matchLabels:
      kyma-project.io/module: btp-operator
  policyTypes:
  - Egress
  egress:
  - ports:
    - port: 443
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: kyma-system
  name: kyma-project.io--btp-operator-to-dns
  labels:
    purpose: dns
spec:
  podSelector:
    matchLabels:
      kyma-project.io/module: btp-operator
  policyTypes:
    - Egress
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
      to:
        - ipBlock:
            cidr: 0.0.0.0/0
    - ports:
        - port: 8053
          protocol: UDP
        - port: 8053
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              gardener.cloud/purpose: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              gardener.cloud/purpose: kube-system
          podSelector:
            matchLabels:
              k8s-app: node-local-dns
