module-resources/apply/webhook.yml
---
# Source: sap-btp-operator/templates/webhook.yml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: sap-btp-operator-mutating-webhook-configuration
webhooks:
  - admissionReviewVersions:
      - v1beta1
      - v1
    clientConfig:
      service:
        name: sap-btp-operator-webhook-service
        namespace: kyma-system
        path: /mutate-services-cloud-sap-com-v1-servicebinding
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURSekNDQWkrZ0F3SUJBZ0lRZkthTDVHNGZpZHJScHAvdFJjOEhtREFOQmdrcWhraUc5dzBCQVFzRkFEQXUKTVN3d0tnWURWUVFERXlOellYQXRZblJ3TFc5d1pYSmhkRzl5TFhkbFltaHZiMnN0YzJWeWRtbGpaUzFqWVRBZQpGdzB5TXpBeU1ERXhNRE00TlRoYUZ3MHpNekF4TWpreE1ETTROVGhhTUM0eExEQXFCZ05WQkFNVEkzTmhjQzFpCmRIQXRiM0JsY21GMGIzSXRkMlZpYUc5dmF5MXpaWEoyYVdObExXTmhNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUYKQUFPQ0FROEFNSUlCQ2dLQ0FRRUF1dzI1ektmaUYxbW9JcVpmWGlqZVpQbzJjcElDK0c4ckMzZlhJeDhKOEtxTApmKzVtU0lDMzA5 [...]
    failurePolicy: Fail
    name: mservicebinding.kb.io
    rules:
      - apiGroups:
          - services.cloud.sap.com
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - servicebindings
    sideEffects: None
  - admissionReviewVersions:
      - v1beta1
      - v1
    clientConfig:
      service:
        name: sap-btp-operator-webhook-service
        namespace: kyma-system
        path: /mutate-services-cloud-sap-com-v1-serviceinstance
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURSekNDQWkrZ0F3SUJBZ0lRZkthTDVHNGZpZHJScHAvdFJjOEhtREFOQmdrcWhraUc5dzBCQVFzRkFEQXUKTVN3d0tnWURWUVFERXlOellYQXRZblJ3TFc5d1pYSmhkRzl5TFhkbFltaHZiMnN0YzJWeWRtbGpaUzFqWVRBZQpGdzB5TXpBeU1ERXhNRE00TlRoYUZ3MHpNekF4TWpreE1ETTROVGhhTUM0eExEQXFCZ05WQkFNVEkzTmhjQzFpCmRIQXRiM0JsY21GMGIzSXRkMlZpYUc5dmF5MXpaWEoyYVdObExXTmhNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUYKQUFPQ0FROEFNSUlCQ2dLQ0FRRUF1dzI1ektmaUYxbW9JcVpmWGlqZVpQbzJjcElDK0c4ckMzZlhJeDhKOEtxTApmKzVtU0lDMzA5 [...]
    failurePolicy: Fail
    name: mserviceinstance.kb.io
    rules:
      - apiGroups:
          - services.cloud.sap.com
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - serviceinstances
    sideEffects: None
---
# Source: sap-btp-operator/templates/webhook.yml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: sap-btp-operator-validating-webhook-configuration
webhooks:
  - admissionReviewVersions:
      - v1beta1
      - v1
    clientConfig:
      service:
        name: sap-btp-operator-webhook-service
        namespace: kyma-system
        path: /validate-services-cloud-sap-com-v1-servicebinding
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURSekNDQWkrZ0F3SUJBZ0lRZkthTDVHNGZpZHJScHAvdFJjOEhtREFOQmdrcWhraUc5dzBCQVFzRkFEQXUKTVN3d0tnWURWUVFERXlOellYQXRZblJ3TFc5d1pYSmhkRzl5TFhkbFltaHZiMnN0YzJWeWRtbGpaUzFqWVRBZQpGdzB5TXpBeU1ERXhNRE00TlRoYUZ3MHpNekF4TWpreE1ETTROVGhhTUM0eExEQXFCZ05WQkFNVEkzTmhjQzFpCmRIQXRiM0JsY21GMGIzSXRkMlZpYUc5dmF5MXpaWEoyYVdObExXTmhNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUYKQUFPQ0FROEFNSUlCQ2dLQ0FRRUF1dzI1ektmaUYxbW9JcVpmWGlqZVpQbzJjcElDK0c4ckMzZlhJeDhKOEtxTApmKzVtU0lDMzA5 [...]
    failurePolicy: Fail
    name: vservicebinding.kb.io
    rules:
      - apiGroups:
          - services.cloud.sap.com
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - servicebindings
    sideEffects: None
